api key google service

--- a/PhotoEditor1.0/GoogleService-Info.plist
+++ b/PhotoEditor1.0/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.245735679508-8psflc20n42so9e9pup6u243soj1rgrk</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBBsgTsjEKNw6Fk7uK_lU6qJ3e91_1tQps</string>
+	<string>YOUR API KEY</string>
 	<key>GCM_SENDER_ID</key>
 	<string>245735679508</string>
 	<key>PLIST_VERSION</key>
